--- a/PreOrder Now.css
+++ b/PreOrder Now.css
@@ -1,14 +1,10 @@
 body {
     font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-    display: flex;
-    align-items:revert-layer;
-    justify-content:space-evenly;
     margin: 0;
     padding: 0;
     position: relative;
     overflow: auto;
     overflow-x: hidden;
-    height: 100%;
 }
 
 body::before {
@@ -25,6 +21,29 @@ body::before {
     background-repeat: no-repeat;
     opacity: 0.3;
     z-index: -1;
+}
+
+.content{
+  width: 100%;
+    height: 100vh;
+    display: flex;
+    align-items: center;
+    justify-content: space-around;
+ }
+
+.wrapper1, .wrapper2 {
+      background:antiquewhite; 
+    box-shadow: 0 8px 20px rgba(0, 0, 0, 0.15); /* Soft shadow */
+    width: 40%;
+     border: 2px solid orange;
+    border-radius: 40px;
+    margin-top: 20px;
+    text-align: center;
+     transition: transform 0.3s ease;
+}
+
+.wrapper1:hover, .wrapper2:hover {
+    transform: translateY(-10px); /* Subtle lift effect on hover */
 }
 
 .cta-button {
